--- a/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
@@ -148,25 +148,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3A1-i7-Dbm">
-                                <rect key="frame" x="-20" y="-20" width="433" height="892"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" minimumZoomScale="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="3A1-i7-Dbm">
+                                <rect key="frame" x="-20" y="0.0" width="433" height="852"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="zhu-NC-2lL" userLabel="Image View">
-                                        <rect key="frame" x="20" y="20" width="1600" height="1059"/>
+                                        <rect key="frame" x="0.0" y="56" width="425" height="717"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BNj-Ai-JzD" userLabel="Button Share">
-                                        <rect key="frame" x="211" y="815" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="Jaz-iL-G9K"/>
-                                            <constraint firstAttribute="height" constant="50" id="THx-8X-Cw3"/>
-                                        </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="Button"/>
-                                        <connections>
-                                            <action selector="didTapShareButton:" destination="vz9-bV-kJI" eventType="touchUpInside" id="SDU-ei-Li8"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <viewLayoutGuide key="contentLayoutGuide" id="BKK-Db-reC"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="Jwj-Mf-sM4"/>
@@ -187,20 +175,32 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="didTapBackButton" destination="vz9-bV-kJI" eventType="touchUpInside" id="WhO-RS-2u5"/>
+                                    <action selector="didTapBackButton" destination="vz9-bV-kJI" eventType="touchUpInside" id="GWC-6O-9gi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eop-3J-cKt" userLabel="Sharebutton">
+                                <rect key="frame" x="171.66666666666666" y="785" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Tsb-PU-tHx"/>
+                                    <constraint firstAttribute="width" constant="50" id="pmT-pk-3Mn"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Button"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="vz9-bV-kJI" eventType="touchUpInside" id="ZXz-XO-RA9"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2Tu-rX-j4F"/>
                         <color key="backgroundColor" name="Color1"/>
                         <constraints>
+                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="bottom" secondItem="eop-3J-cKt" secondAttribute="bottom" constant="17" id="9gg-6y-x27"/>
                             <constraint firstItem="2Tu-rX-j4F" firstAttribute="top" secondItem="3A1-i7-Dbm" secondAttribute="top" id="A1Q-1A-Pcw"/>
-                            <constraint firstItem="BNj-Ai-JzD" firstAttribute="centerX" secondItem="2Tu-rX-j4F" secondAttribute="centerX" id="A83-WA-GOi"/>
                             <constraint firstItem="Q4Z-gZ-bIK" firstAttribute="top" secondItem="2Tu-rX-j4F" secondAttribute="top" constant="8" id="MGb-S4-QBj"/>
                             <constraint firstItem="3A1-i7-Dbm" firstAttribute="trailing" secondItem="2Tu-rX-j4F" secondAttribute="trailing" id="ScB-jy-QBg"/>
+                            <constraint firstItem="eop-3J-cKt" firstAttribute="centerX" secondItem="2Tu-rX-j4F" secondAttribute="centerX" id="VPq-27-dPI"/>
                             <constraint firstItem="3A1-i7-Dbm" firstAttribute="bottom" secondItem="2Tu-rX-j4F" secondAttribute="bottom" id="eE7-ie-Cye"/>
                             <constraint firstItem="Q4Z-gZ-bIK" firstAttribute="leading" secondItem="2Tu-rX-j4F" secondAttribute="leading" constant="8" id="krk-As-i5A"/>
-                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="bottom" secondItem="BNj-Ai-JzD" secondAttribute="bottom" constant="17" id="qNK-gh-6iH"/>
                             <constraint firstItem="2Tu-rX-j4F" firstAttribute="leading" secondItem="3A1-i7-Dbm" secondAttribute="leading" id="uf4-2x-Hmz"/>
                         </constraints>
                     </view>
