--- a/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EJS-XR-xgd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gU7-5E-hbm">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -48,7 +48,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rqq-Og-1Ux">
-                                <rect key="frame" x="16" y="680" width="361" height="48"/>
+                                <rect key="frame" x="16" y="714" width="361" height="48"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="ECr-tm-UXh"/>
@@ -267,13 +267,40 @@
             </objects>
             <point key="canvasLocation" x="2110.6870229007632" y="13.380281690140846"/>
         </scene>
+        <!--Unsplash-->
+        <scene sceneID="3EG-hd-H6P">
+            <objects>
+                <viewController id="gU7-5E-hbm" userLabel="Unsplash" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xc4-ek-qBa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="splash_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="GH2-aw-mu3">
+                                <rect key="frame" x="161" y="391" width="70" height="70"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GpZ-bZ-88v"/>
+                        <color key="backgroundColor" name="Color"/>
+                        <constraints>
+                            <constraint firstItem="GH2-aw-mu3" firstAttribute="centerX" secondItem="GpZ-bZ-88v" secondAttribute="centerX" id="Nzg-lH-v96"/>
+                            <constraint firstItem="GH2-aw-mu3" firstAttribute="centerY" secondItem="GpZ-bZ-88v" secondAttribute="centerY" id="PbR-K2-5IU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="EJS-XR-xgd" kind="presentation" identifier="ShowAuthenticationScreen" modalPresentationStyle="fullScreen" id="WLB-js-JrH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0gS-bk-aA0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3153.4351145038167" y="1277.4647887323945"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gam-Fk-d4J">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EJS-XR-xgd" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4Fz-qf-eB7">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -293,6 +320,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1o-nY-UB6">
+                                <rect key="frame" x="0.0" y="0.0" width="64" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="Wob-lT-GhO"/>
+                                    <constraint firstAttribute="height" constant="44" id="l88-Bc-fBc"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="nav_back_botton"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="9F0-i4-BeP" eventType="touchUpInside" id="XAX-sV-0dr"/>
+                                </connections>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7ob-XR-nER">
+                                <rect key="frame" x="0.0" y="40" width="393" height="4"/>
+                                <color key="progressTintColor" name="Color1"/>
+                            </progressView>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsm-MX-AKJ">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -301,40 +344,30 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1o-nY-UB6">
-                                <rect key="frame" x="0.0" y="0.0" width="64" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="64" id="Wob-lT-GhO"/>
-                                    <constraint firstAttribute="height" constant="44" id="l88-Bc-fBc"/>
-                                </constraints>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="nav_back_botton">
-                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapBackButton:" destination="9F0-i4-BeP" eventType="touchUpInside" id="XAX-sV-0dr"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yif-MA-iRY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fsm-MX-AKJ" firstAttribute="leading" secondItem="4jz-aF-TBL" secondAttribute="leading" id="2Aq-On-93E"/>
+                            <constraint firstItem="yif-MA-iRY" firstAttribute="trailing" secondItem="7ob-XR-nER" secondAttribute="trailing" id="619-SN-kUD"/>
+                            <constraint firstItem="7ob-XR-nER" firstAttribute="top" secondItem="yif-MA-iRY" secondAttribute="top" constant="40" id="Ied-ai-igd"/>
                             <constraint firstItem="n1o-nY-UB6" firstAttribute="top" secondItem="yif-MA-iRY" secondAttribute="top" id="Pg8-J8-hzn"/>
                             <constraint firstItem="fsm-MX-AKJ" firstAttribute="top" secondItem="4jz-aF-TBL" secondAttribute="top" id="hAu-uL-P90"/>
                             <constraint firstAttribute="bottom" secondItem="fsm-MX-AKJ" secondAttribute="bottom" id="jGW-gk-bH9"/>
                             <constraint firstAttribute="trailing" secondItem="fsm-MX-AKJ" secondAttribute="trailing" id="osI-oM-vvC"/>
                             <constraint firstItem="n1o-nY-UB6" firstAttribute="leading" secondItem="yif-MA-iRY" secondAttribute="leading" id="p0q-T1-a4p"/>
+                            <constraint firstItem="7ob-XR-nER" firstAttribute="leading" secondItem="yif-MA-iRY" secondAttribute="leading" id="xel-SG-OOg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gxd-sr-SdH"/>
                     <connections>
+                        <outlet property="progressView" destination="7ob-XR-nER" id="qy1-CQ-yvz"/>
                         <outlet property="webView" destination="fsm-MX-AKJ" id="x6e-iL-as4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Ax-Ay-b8i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1253" y="2021"/>
+            <point key="canvasLocation" x="-1254.1984732824426" y="2020.4225352112678"/>
         </scene>
     </scenes>
     <resources>
@@ -344,6 +377,7 @@
         <image name="auth_screen_logo" width="60" height="60"/>
         <image name="like_button_off" width="42" height="42"/>
         <image name="nav_back_botton" width="24" height="24"/>
+        <image name="splash_screen_logo" width="75" height="78"/>
         <image name="tab_editorial_active" width="76" height="49"/>
         <image name="tab_profile_active" width="76" height="49"/>
         <namedColor name="Color">
